# pixel2style2pixel

./: setup.cfg
dcpsp/: predict.py
dcpsp/configs/: data_configs.py  transforms_config.py
dcpsp/criteria/: id_loss.py  moco_loss.py
dcpsp/criteria/lpips/: lpips.py  networks.py
dcpsp/datasets/: augmentations.py  gt_res_dataset.py  images_dataset.py  inference_dataset.py
dcpsp/models/: psp.py
dcpsp/models/encoders/: helpers.py  model_irse.py  psp_encoders.py
dcpsp/models/mtcnn/: mtcnn.py
dcpsp/models/mtcnn/mtcnn_pytorch/src/: align_trans.py  detector.py  first_stage.py  get_nets.py
dcpsp/models/stylegan2/: model.py
dcpsp/models/stylegan2/op/: fused_act.py  upfirdn2d.py
dcpsp/options/: test_options.py  train_options.py
dcpsp/scripts/: align_all_parallel.py  calc_id_loss_parallel.py  calc_losses_on_images.py  generate_sketch_data.py  inference.py  style_mixing.py  train.py
dcpsp/training/: coach.py
dcpsp/utils/: common.py  data_utils.py  wandb_utils.py
