[metadata]
name = dcpsp
version = 0.0.1
long_description = file: README.md
description = Alias-Free Generative Adversarial Networks (StyleGAN3)
license =
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    torchvision>=0.9.0
    numpy>=1.21.1
    tqdm>=4.43.0
    torch-optimizer>=0.1.0
    opencv-python>=4.5.3.56
    Pillow>=8.3.2
    matplotlib>=3.2.1
    scipy>=1.7.1

[options.package_data]
* =
    *.yaml
    *.cu
    *.cpp
    *.h

[options.entry_points]
console_scripts =
    dcpsp-train = scripts.train:main
    dcpsp-style-mixing = scripts.style_mixing:run
    dcpsp-inference = scripts.inference:run
    dcpsp-calc-losses-on-images = scripts.calc_losses_on_images:run
    dcpsp-calc-id-loss-parallel = scripts.calc_id_loss_parallel:run
    dcpsp-align-all-parallel = scripts.align_all_parallel:run

[flake8]
max-line-length = 120

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
